--- a/partials/headers/algorithmHeader.phtml
+++ b/partials/headers/algorithmHeader.phtml
@@ -39,6 +39,6 @@
         </ul>
     <?php endif ?>
     <script type="text/javascript">
-        window.defaults.aid = <?= $__aid ?>;
+        window.current.aid = <?= $__aid ?>;
     </script>
 <?php endif ?>
